--- a/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication/Views/MainView.axaml
+++ b/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication/Views/MainView.axaml
@@ -7,8 +7,10 @@
              x:Class="SampleAvaloniaApplication.Views.MainView"
              x:DataType="vm:MainViewModel">
   <Design.DataContext>
-    <!-- This only sets the DataContext for the previewer in an IDE,
-         to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
+    <!--
+    This only sets the DataContext for the previewer in an IDE.
+    The actual setting of the DataContext is done in the code-behind with an overloaded constructor.
+    -->
     <vm:MainViewModel />
   </Design.DataContext>
 
