--- a/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Browser/wwwroot/index.html
+++ b/templates/Avalonia/AvaloniaSolution/SampleAvaloniaApplication.Browser/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>AvaloniaApplication1</title>
+    <title>SampleAvaloniaApplication</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./app.css" />
