--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
@@ -31,6 +31,12 @@
         </div>
 
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ticket-queues">
+                <span class="bi bi-ticket-nav-menu" aria-hidden="true"></span> Ticket Queues
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="auth">
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
             </NavLink>
