--- a/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
+++ b/templates/Blazor/BlazorApp/BlazorApp/BlazorApp/Components/Layout/NavMenu.razor
@@ -4,7 +4,7 @@
 
 <RadzenPanelMenu>
     <RadzenPanelMenuItem Text="Home" Icon="home" Path="" Match="NavLinkMatch.All" />
-    <RadzenPanelMenuItem Text="Ticket Queues" Icon="confirmation_number" Path="ticket-queues" />
+    <RadzenPanelMenuItem Text="My Rooms" Icon="meeting_room" Path="my-rooms" />
     <RadzenPanelMenuItem Text="Auth Required" Icon="lock" Path="auth" />
     
     <AuthorizeView>
